--- a/.github/workflows/docker-dep.yml
+++ b/.github/workflows/docker-dep.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # Step 4: Build and push the Docker image
       - name: Build and push Docker image
